# golpac-move-files

./: package-lock.json  tauri.conf.json
golpac-support-app/: golpac-support-app_0.1.0_x64_en-US.msi.sig  package-lock.json  package.json  updater.json
golpac-support-app/.tauri/keys/: tauri.key  tauri.key.pub
golpac-support-app/GolpacSupportVcercel-main/: App.tsx  README.md  constants.ts  index.html  metadata.json  package.json  tsconfig.json  types.ts  vite.config.ts
golpac-support-app/GolpacSupportVcercel-main/api/: devices.ts  install.ts
golpac-support-app/GolpacSupportVcercel-main/components/: AIAnalyst.tsx  AuthPage.tsx  Dashboard.tsx  DeviceList.tsx  Layout.tsx  UserManagement.tsx
golpac-support-app/GolpacSupportVcercel-main/components/ui/: Badge.tsx
golpac-support-app/GolpacSupportVcercel-main/services/: geminiService.ts
golpac-support-app/golpac-support-backend/: server.js
golpac-support-app/src/: App.css  App.tsx  types.ts
golpac-support-app/src-tauri/: Cargo.toml  tauri.conf.json
golpac-support-app/src-tauri/icons/: icon.icns
golpac-support-app/src-tauri/src/: lib.rs  main.rs
golpac-support-app/src/ai/: aiLogic.ts
golpac-support-app/src/backend/: registerInstall.ts
golpac-support-app/src/components/: AiAssistant.tsx  SystemPanel.css  SystemPanel.tsx  TicketHistory.tsx  TroubleshootPanel.css  TroubleshootPanel.tsx
