[package]
name = "golpac-support-app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "golpac_support_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
whoami = "1.5"
local-ip-address = "0.5"
screenshots = "0.8"
image = { version = "0.25", features = ["png"] }
base64 = "0.22"
tauri-plugin-notification = "2"
windows = { version = "0.52", features = ["Win32_Graphics_Printing", "Win32_Foundation", "Win32_Graphics_Gdi", "Win32_Security"] }
arboard = "3"
tauri-plugin-single-instance = "2"
sysinfo = "0.29"
reqwest = { version = "0.11", default-features = false, features = ["blocking", "rustls-tls"] }
chrono = { version = "0.4", features = ["serde"] }
